[package]
name = "solana-stablecoin"
version = "0.1.0"
edition = "2021"
description = "A Solana program for minting and managing stablecoins using Etherfuse oracles"
license = "MIT"

[dependencies]
solana-program = "=1.18.26"
thiserror = "1.0"
stablebond-sdk = "2.0.21"
borsh = "0.10"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
